# pixel_param

./: .gitignore  .travis.yml  Cargo.toml  README.md
pixel_param-python/: README.md  kat.txt  param.py
script/: README.md  kat.txt  param.py
script/pixel_pp_kat/: Cargo.toml
script/pixel_pp_kat/src/: main.rs
src/: constants.rs  default.rs  default_test.rs  lib.rs  serdes.rs  serdes_test.rs
test_vector/: Cargo.toml  README.MD
test_vector/src/: main.rs
