[package]
name = "pixel_param"
version = "0.1.0"
authors = ["zhenfei <zhenfei.zhang@hotmail.com>"]
edition = "2018"


[dependencies]
pairing = { version = "0.14.3",  git = "https://github.com/algorand/pairing-fork-transmute", features = [ "transmutable" ] }
#pairing = { version = "0.14.3", path = "../../pairing-fork-transmute", features = [ "transmutable" ] }
bls_sigs_ref-rs = { git = "https://github.com/algorand/bls_sigs_ref-fork"}

hkdf = "0.7"
sha2 = "0.8"
