[package]
name = "pixel_param"
version = "0.1.0"
authors = ["zhenfei <zhenfei.zhang@hotmail.com>"]
edition = "2018"


[dependencies]
pairing = { version = "0.14.3", git = "ssh://git@github.com/algorand/pairing-fork", features = [ "transmutable" ] }
bls_sigs_ref-rs  = {git = "ssh://git@github.com/algorand/bls_sigs_ref-fork"}

hkdf = "0.7"
sha2 = "0.8"
